# PsycheMirror

./: CMakeLists.txt  README.md  build.sh  dev.sh  imgui.ini
src/: csi_tab.cpp  csi_tab.hpp  data_bridge.cpp  data_bridge.hpp  editor_tab.cpp  editor_tab.hpp  eikos_tab.cpp  eikos_tab.hpp  home_tab.cpp  home_tab.hpp  icon_renderer.cpp  icon_renderer.hpp  ics_tab.cpp  ics_tab.hpp  iks_tab.cpp  iks_tab.hpp  lsi_tab.cpp  lsi_tab.hpp  main_simple.cpp  navbar.cpp  navbar.hpp  settings_tab.cpp  settings_tab.hpp  viewer_tab.cpp  viewer_tab.hpp
